--- a/index.html
+++ b/index.html
@@ -7,13 +7,44 @@
     <link href="/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="static/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <link href="style.css" rel="stylesheet">
-    <title>ualreadydone | Simple To-Do Manager</title>
+    <title>UAlreadyDone | Simple To-Do Manager</title>
+    <style>
+        .container {
+            background-color: #FF6347;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .text-line {
+            background-color: transparent;
+        color: #eeeeee;
+        outline: none;
+        outline-style: none;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-bottom: solid #eeeeee 1px;
+        padding: 3px 10px;
+        }
+    </style>
 </head>
 
 <body>
     <main class="container">
-        <input type="text" placeholder="digite algo aqui..."></input>
+        <input type="text" class="text-line" data-ls-module="charCounter" maxlength="160" placeholder="digite o nome da sua tarefa..."></input>
     </main>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+            </div>
+            <div class="col-6">
+            </div>
+            <div class="col">
+            </div>
+          </div>
+        
+    </div>
 </body>
     <script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
 </html>
